# roger_python_guide

./: .gitignore
class-19/: max_value.py  (+1 more)
class_30/demo2/: hashtable.py  pyproject.toml  test_hashtable.py
class_42/: deco.py  facilitator.md  pyproject.toml  test_linked_list_interator.py  test_linked_list_iterator.py  warmup.py
class_42/demo401n2/: deco.py  linked_list_iterator.py  test_linked_list_interator.py
class_42/demo401n3/: deco.py  linked_list_iterator.py  pyproject.toml  test_linked_list_interator.py  wrapper.py
class_42/snacks-api/: .heroku.yml.icloud  .poetry.lock.icloud  .pyproject.toml.icloud  Dockerfile  requirements.txt
class_42/snacks-api/snacks/: models.py  serializers.py  urls.py  views.py
class_42/snacks-api/snacks_api_project/: asgi.py  settings.py  urls.py  wsgi.py
data-structures-and-algorithms/: .gitignore  README.md  pyproject.toml
data-structures-and-algorithms/challenges/array_binary_search/: README.md  array_binary_search.py  test_array_binary_search.py
data-structures-and-algorithms/challenges/array_reverse/: README.md  array_reverse.py  test_array_reverse.py
data-structures-and-algorithms/challenges/array_shift/: README.md  array_shift.py  test_array_shift.py
data-structures-and-algorithms/challenges/balanced_binary_tree/: README.md  balanced_binary_tree.py  test_balanced_binary_tree.py
data-structures-and-algorithms/challenges/can_place_flowers/: README.md  can_place_flowers.py
data-structures-and-algorithms/challenges/eeney_meeney_miney_moe/: README.md  eeney_meeney_miney_moe.py  test_eeney_meeney_miney_moe.py
(+384 files in other folders)
