[tool.poetry]
name = "class_42"
version = "0.1.0"
description = ""
authors = ["Roger Huba <rogerhuba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.3"
ptw = "^1.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
