[tool.poetry]
name = "demo2"
version = "0.1.0"
description = ""
authors = ["Roger Huba <rogerhuba@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.8b0"
flake8 = "^3.9.2"
pytest-watch = "^4.2.0"
codefellows = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
